# zeus-ai-api-gateway

./: .env  README.md  docker-compose.yml
athena/: .env  .gitignore  Dockerfile  README.md  app.py  requirements.txt
athena/routes/: chat_bot.py  embedding.py  langchain_bot.py  llamaindex_chat.py  pg_nlsql.py  react_llamaindex.py
athena/templates/: index.html
bruno/: README.md  bruno.json  package-lock.json  package.json
bruno/Athena/: embedding.bru  get_langchain.bru  get_llamaindex.bru  get_openai.bru  injest_llamaindex.bru
bruno/api/: ping.bru
bruno/environments/: 3rd-party.bru  dev.bru
db/: .gitignore  Dockerfile  README.md  new_migration.sh
db/scripts/: run-migrations-down.sh  (+2 more)
docs/: prompt-generating-super-prompt.txt
zeus/: .env  .gitignore  Cargo.toml  Dockerfile  README.md
zeus/prompt/: compact.txt  is_photo.txt  ocr.txt  poi.txt  poi_visual.txt
zeus/src/: main.rs
zeus/src/api/: cloudflare_ai.rs  google_gemini.rs  google_places.rs  google_vision.rs  mod.rs  open_ai.rs
zeus/src/db/: database_pool.rs  mod.rs
zeus/src/handlers/: ext_routes.rs  mod.rs  poi_routes.rs  response_common.rs  routes.rs
zeus/src/models/: app_dependency.rs  completion_model.rs  custom_error.rs  embedding_body_request.rs  file_upload_request.rs  mod.rs  vision_request.rs
zeus/src/repository/: key_value_repository.rs  key_value_vector_repository.rs  local_storage.rs  mod.rs  prompt_provider.rs  secrets.rs
zeus/src/server/: server.rs
zeus/src/usecase/: api_tester_usecase.rs  mod.rs  poi_usecase.rs
zeus/src/utils/: gps_utils.rs  image_utils.rs  mod.rs
(+19 files in other folders)
