[package]
name = "zeus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
ulid = "1.1.0"
uuid = { version = "1.6.1", features = ["v4"] }
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-rustls", "json", "chrono" ] }
pgvector = { version = "0.3", features = ["sqlx"] }